# IsoFlicker

./: .gitignore  .pre-commit-config.yaml  ADR-0001.md  AGENTS.md  CHANGELOG.md  Dockerfile  FIX_GIT_PULL.md  GIT_FIX_README.md  IsoFlicker.code-workspace  add_ffmpeg_to_path.bat  advanced_isochronic_generator.py  codex_here_interactive.bat  docker-compose.yml  file_optimizer.py  fix_git_pull.bat  install-ffmpeg.bat  install_improvements.py  instructions.txt  integrated_isoflicker.py  isoFlickerGUI.py  package.json  part1.tmp  part2.tmp  preset_converter.py  readme.md  requirements.txt  run_tests.py  setup.bat  setup_git_remote.py  sine_editor.py  sine_editor_with_xml.py  sine_widget.py  startEnhancedIsoFlicker.bat  starter.py  text_overlay.py  visual_preview.py
.devcontainer/: devcontainer.json
Backup/: enhance_isoflicker.py  (+21 more)
backend/: __init__.py  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py  presets_loader.py  schemas.py
backend/app/routers/: __init__.py  hardware.py  logs.py  presets.py
backend/app/services/: hardware_analysis.py
backend/core/: config.py
backend/data/: README.md
backend/db/: session.py
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 20240705_01_initial.py
backend/tests/: conftest.py  test_hardware_api.py  test_logs_api.py  test_presets_api.py
windows/: CMakeLists.txt  README.md
windows/include/: audio_engine.h  swap_chain.h  telemetry.h
windows/scripts/: build.ps1
windows/src/: audio_engine.cpp  main.cpp  swap_chain.cpp  telemetry.cpp
(+55 files in other folders)
