[project]
name = "isoflicker-backend"
version = "0.1.0"
description = "FastAPI + SQLModel backend for IsoFlicker Windows orchestration"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.29.0",
  "sqlmodel==0.0.14",
  "pydantic-settings==2.2.1",
  "python-multipart==0.0.9"
]

[project.optional-dependencies]
test = [
  "pytest==8.1.1",
  "pytest-asyncio==0.23.5",
  "pytest-cov==5.0.0",
  "httpx==0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "--cov=backend/app --cov-report=term-missing"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
